WCAG fix contrast of link
[4.5.x]

ERM36359

(cherry picked from commit 8361181398511efb502c00b05d799ae40f393977)

--- a/resources/stylesheets/themes/default/colors.less
+++ b/resources/stylesheets/themes/default/colors.less
@@ -98,7 +98,7 @@
 	--discussion-section-bg: #f4f4f4;
 	--discussion-title-fg: #59595a;
 	--discussion-content-bg: #e9e9ee;
-	--discussion-after-content-fg: #6e6e6e;
+	--discussion-after-content-fg: #454545;
 	--discussion-content-fg--hover: #3e5893;
 
 	/* content colors */
